--- a/public/routing.html
+++ b/public/routing.html
@@ -1,7 +1,3 @@
-<!--CAMBIOS:
-    LOGIN SIRVE, GUARDA SESION, MUESTRA DINAMICO
-    ENVIO Y RECEPCION DE ERRORES ANGULAR
--->
 <!DOCTYPE html>
 <html ng-app="app">
 
@@ -12,20 +8,27 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!--Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- Favicons -->
     <link href="img/favicon.png" rel="icon">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700"
+        rel="stylesheet">
+
+
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/magnific-popup/magnific-popup.css" rel="stylesheet">
     <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+    
+	<link rel="stylesheet" type="text/css" href="//css/loginuntil.css">
+	<link rel="stylesheet" type="text/css" href="//css/login.css">
 
 
     <link href="css/style.css" rel="stylesheet">
@@ -64,19 +67,13 @@
 
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li><a href="#!inicio">Inicio</a></li>
-                    <li><a href="#contact">Contactanos</a></li>
-                    <li><a href="#services">Servicos</a></li>
-                    <li class="menu-has-children"><a href="">nose</a>
-                        <ul>
-                            <li><a href="#">nose1</a></li>
-                            <li><a href="#">nose2</a></li>
-                            <li><a href="#">nose3</a></li>
-                        </ul>
-                    </li>
-                    <li><a ng-if="privilegio == 1" href="#">Agregar Medico/Enfermera</a></li>
-                    <li><a href="#!login" ng-if="usuario == '' ">Iniciar Sesión</a></li>
-                    <li><a href="#" ng-if="usuario != ''">Bienvenido: {{usuario}}</a></li>
+                    <li ng-if="usuario == 'root'"><a href="#!form1" ng-click="ocultar()">RegistroAdm</a></li>
+                    <li ng-if="privilegio == 2"><a href="">Registrar paciente</a></li>
+                    <li><a href="#!inicio" ng-click="mostrar()" onclick="regresar();">Inicio</a></li>
+                    <li><a href="#contact" ng-show="variable">Contactanos</a></li>
+                    <li><a href="#services" ng-show="variable">Servicos</a></li>
+                    <li ><a ng-if="usuario == 'null' || usuario == null" href="#!Login" ng-click="ocultar()">Iniciar Sesión</a></li>
+                    <li ><a ng-if="usuario != 'null' || usuario != null" href="#">{{usuario}}</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
@@ -135,6 +132,7 @@
 
 
     <script src="js/main.js"></script>
+    <script src="//js/login.js"></script>
 
 </body>
 
