Cambia el nombre de errores

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -20,7 +20,7 @@
 					</span>
 				</div>
 
-				<div ng-if="error = true" align="true">
+				<div ng-if="error == true" align="center">
 					<h1>{{mensajeError}}</h1>
 				</div>
 
