--- a/public/routing.html
+++ b/public/routing.html
@@ -68,15 +68,13 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li ng-if="usuario == 'root'"><a href="#!form1" ng-click="ocultar()">RegistroAdm</a></li>
-                    <li ng-if="privilegio == 2"><a href="">Registrar paciente</a></li>
+                    <li ng-if="privilegio == 2"><a href="#!formPaciente">Registrar paciente</a></li>
                     <li><a href="#!inicio" ng-click="mostrar()" onclick="regresar();">Inicio</a></li>
                     <li><a href="#contact" ng-show="variable">Contactanos</a></li>
                     <li><a href="#services" ng-show="variable">Servicos</a></li>
                     <li ><a ng-if="!usuario" href="#!Login" ng-click="ocultar()">Iniciar Sesión</a></li>
                     <li ng-if="usuario"><a href="#">Bienvenido: {{usuario}}</a></li>
                     <li ng-if="usuario"><a href="#" ng-click="cerrarSesion()">Cerrar Sesion</a></li>
-                    <li><a href="#!formPaciente">PacienteForm</a></li>
-
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
