--- a/public/routing.html
+++ b/public/routing.html
@@ -75,6 +75,9 @@
                     <li ><a ng-if="!usuario" href="#!Login" ng-click="ocultar()">Iniciar Sesión</a></li>
                     <li ng-if="usuario"><a href="#">Bienvenido: {{usuario}}</a></li>
                     <li ng-if="usuario"><a href="#" ng-click="cerrarSesion()">Cerrar Sesion</a></li>
+                    <li><a href="#!formRegistroPaciente">Registro-Paciente</a></li>
+
+                    
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
