--- a/public/routing.html
+++ b/public/routing.html
@@ -67,7 +67,7 @@
 
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li ng-if="usuario == 'root'"><a href="#!form1" ng-click="ocultar()">RegistroAdm</a></li>
+                    <li ng-if="usuario == 'root'"><a href="#!form1" ng-click="ocultar()">Registro Personal</a></li>
                     <li ng-if="privilegio == 2"><a href="#!formPaciente">Registrar paciente</a></li>
                     <li><a href="#!inicio" ng-click="mostrar()" onclick="regresar();">Inicio</a></li>
                     <li><a href="#contact" ng-show="variable">Contactanos</a></li>
