Videochat con diseno, falta funcion sinn botones

--- a/public/pages/video.html
+++ b/public/pages/video.html
@@ -1,5 +1,5 @@
 <div ng-init="iniciar()">
-  <div ng-show="OcultarID">
+  <div>
     <label>Your ID:</label><br />
     <textarea id="yourId"></textarea><br />
     <label>Other ID:</label><br />
