--- a/public/routing.html
+++ b/public/routing.html
@@ -65,7 +65,7 @@
 
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li><a href="#!HistorialConsultas">Historial de Consultas</a></li>
+                    <li ng-if="privilegio == 2"><a href="#!HistorialConsultas">Historial de Consultas</a></li>
                     <li ng-if="usuario == 'root'"><a href="#!form1" ng-click="ocultar()">Registro Personal</a></li>
                     <li ng-if="privilegio == 2"><a href="#!formPaciente">Registro consulta</a></li>
                     <li ng-if="privilegio == 2"><a href="#!formRegistroPaciente">Registro-Paciente</a></li>
@@ -75,7 +75,7 @@
                     <li ><a ng-if="!usuario" href="#!Login" ng-click="ocultar()">Iniciar Sesión</a></li>
                     <li ng-if="usuario"><a href="#">Bienvenido: {{usuario}}</a></li>
                     <li ng-if="usuario"><a href="#" ng-click="cerrarSesion()">Cerrar Sesion</a></li>
-                    <li><a href="#!videoChat">Video Chat</a></li>
+                    <li ng-if="usuario"><a href="#!videoChat">Video Chat</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
