Se realizo el videoChat dinamico, despues del videoChat, asignar doctor, hacer expediente y receta

--- a/public/pages/registroPaciente.html
+++ b/public/pages/registroPaciente.html
@@ -3,6 +3,7 @@
         <div class="col-sm-12 mt-5">
             <div align="center">
                 <h1 class="wow fadeInUp"><spam>Ingrese sus datos</spam></h1>
+                <h1 ng-if="error" class="bg-danger">Error: {{mensajeError}}</h1>
             </div>
             <form>
                 <div class="row ml-5 mr-5">
