--- a/public/pages/video.html
+++ b/public/pages/video.html
@@ -25,13 +25,13 @@
 <hr>
     <div class="container pt-3 border border-primary rounded">
       <div class="row">
-        <div class="col-xl-6">
+        <div class="col-xl-6" hidden>
           <div class="form-group wow fadeInRight">
             <label>Your Id:</label>
             <textarea class="form-control" id="yourId"></textarea>
           </div>
         </div>
-        <div class="col-xl-6 wow fadeInLeft">
+        <div class="col-xl-6 wow fadeInLeft" hidden>
           <div class="form-group">
             <label>Other Id:</label>
             <textarea class="form-control" id="otherId"></textarea>
@@ -39,7 +39,7 @@
         </div>
         <div class="col-xl-4"></div>
         <div class="col-xl-4 wow fadeInDown">
-          <button id="connect" class="btn btn-success btn-block"><i class="fas fa-video mr-2"></i>Connect</button><br />
+          <button id="connect" class="btn btn-success btn-block" hidden><i class="fas fa-video mr-2"></i>Connect</button><br />
         </div>
         <div class="col-xl-4"></div>
       </div>
