--- a/public/routing.html
+++ b/public/routing.html
@@ -41,16 +41,11 @@
 
     <section id="topbar" class="d-none d-lg-block">
         <div class="container clearfix">
-            <div class="contact-info float-left">
-                <i class="fa fa-envelope-o"></i> <a href="#">Juan100_americ@hotmail.com</a>
-                <i class="fa fa-phone"></i> {{telcontacto}}
+            <div class="contact-info float-left m-0 p-0">
+                <h4 ng-if="usuario"><b><a href="#">Bienvenido: {{usuario}}</a></b></h4>
             </div>
-            <div class="social-links float-right">
-                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+            <div>
+                <li ng-if="usuario && privilegio == 2 && notificacion"><a ng-click="videoEntrante()"><i class="fas fa-bell text-warning">(1)</i></a></li>
             </div>
         </div>
     </section>
@@ -74,10 +69,8 @@
                     <li><a href="#contact" ng-show="variable">Contactanos</a></li>
                     <li><a href="#services" ng-show="variable">Servicos</a></li>
                     <li ><a ng-if="!usuario" href="#!Login" ng-click="ocultar()">Iniciar Sesión</a></li>
-                    <li ng-if="usuario"><a href="#">Bienvenido: {{usuario}}</a></li>
                     <li ng-if="usuario"><a href="#" ng-click="cerrarSesion()">Cerrar Sesion</a></li>
                     <li ng-if="privilegio == 0"><a href="#!videoContactos">Video Consulta</a></li>
-                    <li ng-if="usuario && privilegio == 2 && notificacion"><a ng-click="videoEntrante()"><i class="fas fa-bell text-warning">(1)</i></a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
